SNOW-1437294: CI/CD (#4)